feat: flujo de foros agregado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,15 @@
 <router-outlet />
+<!--nav>
+    <a routerLink="/home">Home</a>
+    <a routerLink="/community">Comunidad</a>
+    <a routerLink="/forums">Foros</a>
+    <a routerLink="/forum-post">Foros post</a>
+    <a routerLink="/orientation">Orientación Vocacional</a>
+    <a routerLink="/careers">Carreras</a>
+    <a routerLink="/experience">Experiencia</a>
+  </nav-->
+  
+
+  <router-outlet></router-outlet>
+  
+  
