--- a/src/app/info-instituciones/info-instituciones.component.html
+++ b/src/app/info-instituciones/info-instituciones.component.html
@@ -5,7 +5,7 @@
       <button (click)="mostrarDetalles(universidad)">Detalles...</button>
     </div>
   </div>
-  
+  <!-- otra pantalla-->
   <div *ngIf="showError">
     <div class="container">
       <header class="header">
