--- a/src/app/resultado-encuesta/resultado-encuesta.component.html
+++ b/src/app/resultado-encuesta/resultado-encuesta.component.html
@@ -58,7 +58,7 @@
 
     <!-- Botones -->
     <div class="button-container">
-        <button class="button">Guardar</button>
+        <button class="button" (click)="navigateToResultadoGuardado()">Guardar</button>
         <button class="button" (click)="navigateToAccesoTest()">Reiniciar</button>
     </div>
 </div>
