--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -39,7 +39,7 @@
             <p>Su cuenta ha sido vereficada correctamente. Por favor inicie sesión para continuar.</p>
         </div>
         <div class="buttons">
-            <input class="signup" type="button" value="Iniciar Sesión" (click)="navigateToLogin()">
+            <input class="signup" type="button" value="Iniciar Sesión" (click)="navigateToSignIn()">
         </div>
     }
 </div>
