--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -4,7 +4,7 @@
         <p>VocApp</p>
     </div>
     <div class="body">
-        <input class="iniciar-sesion" type="button" value="Iniciar Sesión">
+        <input class="iniciar-sesion" type="button" value="Iniciar Sesión" (click)="navigateToSignIn()">
         <input class="crear-cuenta" type="button" value="Crear Cuenta" (click)="navigateToSignUp()">
     </div>
 </div>
