--- a/src/app/resultados-guardados/resultados-guardados.component.html
+++ b/src/app/resultados-guardados/resultados-guardados.component.html
@@ -7,4 +7,7 @@
       Podrás acceder a ellos en cualquier momento para consultar tus aptitudes 
       y áreas profesionales recomendadas.
     </p>
-  </div>
+    <div class="button-container">
+      <button class="button" (click)="navigateToAccesoTest()">Guardar</button>
+    </div>
+</div>
