--- a/src/app/acceso-test/acceso-test.component.css
+++ b/src/app/acceso-test/acceso-test.component.css
@@ -1,5 +1,8 @@
-body {
+.accesotest-container {
     font-family: Arial;
+}
+
+body {
     display: flex;
     background-color: #f4f4f9;
     margin: 0;
@@ -15,7 +18,6 @@ body {
 
 .header {
     text-align: center;
-    font-family: Arial;
     margin-bottom: 20px;
 }
 
@@ -74,3 +76,28 @@ body {
     font-size: 16px;
     font-weight: bold;
 }
+
+
+.volver {
+    border: none;
+    min-height: 50px;
+    max-width: 100px;
+    background-color: #ffffff;
+    margin: 0;
+    color: #000000;
+    font-size: 14px;
+    font-size: 0.9rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 50px;
+    transition: transform 0.2s, background-color 1s;
+  }
+  
+  .volver:hover {
+    transform: translateY(-5px);
+    background-color: #00bad7;
+  }
