--- a/src/app/acceso-test/acceso-test.component.html
+++ b/src/app/acceso-test/acceso-test.component.html
@@ -4,7 +4,7 @@
         <p>Sección de test para el estudiante</p>
     </div>
 
-    <div href="#" class="card">
+    <div href="#" class="card" (click)="navigateToResultadoEncuesta()">
         <div class="card-icon icon-orange">📋</div>
         <div class="card-text">Resultados de test</div>
     </div>
@@ -18,4 +18,7 @@
         <div class="card-icon icon-orange">✉️</div>
         <div class="card-text">Enviar resultados a usuarios</div>
     </div>
+
+    <div class="volver" (click)="navigateToHome()">Volver</div>
+
 </div>
