--- a/src/app/foro-student/foro-student.component.html
+++ b/src/app/foro-student/foro-student.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="currentRoute === 'home'" class="frame">
     <div class="frame">
         <div class="profile">
-            <img src="https://cdn.icon-icons.com/icons2/1879/PNG/512/iconfinder-3-avatar-2754579_120516.png" alt="Profile Picture" class="profile-pic">
             <h2>Jon Doe</h2>
+            <img src="https://cdn.icon-icons.com/icons2/1879/PNG/512/iconfinder-3-avatar-2754579_120516.png" alt="Profile Picture" class="profile-pic">
         </div>
         <div class="menu">
             <button (click)="navigateToTest()">Test vocacional</button>
@@ -15,24 +15,28 @@
 
 <div *ngIf="currentRoute === 'community'" class="frame">
     <div class="frame">
+        <img src="https://cdn.icon-icons.com/icons2/1879/PNG/512/iconfinder-3-avatar-2754579_120516.png" alt="Profile Picture" class="profile-pic">
         <h2>Comunidad</h2>
         <div class="menu">
             <button (click)="navigateToForos()">Foros</button>
             <button (click)="navigateToWorkShops()">Talleres vocacionales</button>
             <button (click)="navigateToStories()">Relatos laborales</button>
         </div>
+        <div class="volver" (click)="navigateToHome()">Volver</div>
     </div>
 
 </div>
 
 <div *ngIf="currentRoute === 'forums'" class="frame">
     <div class="frame">
+        <img src="https://cdn.icon-icons.com/icons2/1879/PNG/512/iconfinder-3-avatar-2754579_120516.png" alt="Profile Picture" class="profile-pic">
         <h2>Foros</h2>
         <div class="menu">
-            <button routerLink="/orientation">Orientación vocacional</button>
-            <button routerLink="/careers">Carreras</button>
-            <button routerLink="/experience">Experiencia</button>
+            <button routerLink="/orientation" (click)="navigateToForumPost()">Orientación vocacional</button>
+            <button routerLink="/careers" (click)="navigateToForumPost()">Carreras</button>
+            <button routerLink="/experience" (click)="navigateToForumPost()">Experiencia</button>
         </div>
+        <div class="volver" (click)="navigateToCommunity()">Volver</div>
     </div>
 
 </div>
@@ -109,40 +113,38 @@
                     </a>
                 </div>
             </div>
-            <div class="comments">
-                <div class="comment">
-                    <a class="avatar">
-                        <img
-                            src="https://cdn.icon-icons.com/icons2/1879/PNG/512/iconfinder-3-avatar-2754579_120516.png">
+        </div>
+        <div class="comment">
+            <a class="avatar">
+                <img
+                    src="https://cdn.icon-icons.com/icons2/1879/PNG/512/iconfinder-3-avatar-2754579_120516.png">
+            </a>
+            <div class="content">
+                <a class="author">
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit;">Jenny Hess</font>
+                    </font>
+                </a>
+                <div class="metadata">
+                    <span class="date">
+                        <font style="vertical-align: inherit;">
+                            <font style="vertical-align: inherit;">En este momento</font>
+                        </font>
+                    </span>
+                </div>
+                <div class="text">
+                    <font style="vertical-align: inherit;">
+                        <font style="vertical-align: inherit;">
+                            Elliot, siempre tienes toda la razón :)
+                        </font>
+                    </font>
+                </div>
+                <div class="actions">
+                    <a class="reply">
+                        <font style="vertical-align: inherit;">
+                            <font style="vertical-align: inherit;">Responder</font>
+                        </font>
                     </a>
-                    <div class="content">
-                        <a class="author">
-                            <font style="vertical-align: inherit;">
-                                <font style="vertical-align: inherit;">Jenny Hess</font>
-                            </font>
-                        </a>
-                        <div class="metadata">
-                            <span class="date">
-                                <font style="vertical-align: inherit;">
-                                    <font style="vertical-align: inherit;">En este momento</font>
-                                </font>
-                            </span>
-                        </div>
-                        <div class="text">
-                            <font style="vertical-align: inherit;">
-                                <font style="vertical-align: inherit;">
-                                    Elliot, siempre tienes toda la razón :)
-                                </font>
-                            </font>
-                        </div>
-                        <div class="actions">
-                            <a class="reply">
-                                <font style="vertical-align: inherit;">
-                                    <font style="vertical-align: inherit;">Responder</font>
-                                </font>
-                            </a>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -183,14 +185,14 @@
             <div class="field">
                 <textarea></textarea>
             </div>
-            <div class="ui blue labeled submit icon button">
+            <div class="ui blue labeled submit icon button" (click)="navigateToForos()">
                 <i class="icon edit"></i>
                 <font style="vertical-align: inherit;">
                     <font style="vertical-align: inherit;">Enviar
                     </font>
                 </font>
             </div>
-            <div class="ui blue labeled submit icon button2">
+            <div class="ui blue labeled submit icon button2" (click)="navigateToForos()">
                 <i class="icon edit"></i>
                 <font style="vertical-align: inherit;">
                     <font style="vertical-align: inherit;">Cancelar
