--- a/src/app/info-instituciones/info-instituciones.component.css
+++ b/src/app/info-instituciones/info-instituciones.component.css
@@ -1,28 +1,34 @@
+.frame h2{
+  color:#009FB7;
+  font-size: 2rem;
+  margin-bottom: 50px;
+}
+
 .bg-red {
-  background-color: #82d2f2;
+  font-size: 16px;
+  font-weight: bold;
   padding: 10px;
   margin: 5px;
-  border-radius: 5px;
 }
 
 .bg-yellow {
-  background-color: #82d2f2;
+  font-size: 16px;
+  font-weight: bold;
   padding: 10px;
   margin: 5px;
-  border-radius: 5px;
 }
 
 .bg-blue {
-  background-color: #82d2f2;
+  font-size: 16px;
+  font-weight: bold;
   padding: 10px;
   margin: 5px;
-  border-radius: 5px;
 }
 
 button {
   background-color: transparent;
   border: none;
-  color: blue;
+  background-color: #009FB7;
   cursor: pointer;
   text-decoration: underline;
 }
@@ -62,28 +68,8 @@ button {
 .icons i {
   font-size: 24px;
   margin-left: 16px;
-  color: #005d77;
+  color: #009FB7;
   cursor: pointer;
-}
-
-/* Barra de búsqueda */
-.search-bar {
-  display: flex;
-  align-items: center;
-  margin: 16px 0;
-  padding: 8px;
-  border: 1px solid #c4c4c4;
-  border-radius: 8px;
-  background-color: #4573d6;
-}
-
-.search-bar input {
-  flex: 1;
-  border: none;
-  outline: none;
-  padding: 8px;
-  font-size: 16px;
-  color: #333;
 }
 
 .search-button {
@@ -140,7 +126,7 @@ button {
   padding: 10px 20px;
   font-size: 16px;
   color: #ffffff;
-  background-color: #005d77;
+  background-color: #009FB7;
   border: none;
   border-radius: 8px;
   cursor: pointer;
@@ -148,6 +134,6 @@ button {
 }
 
 button:hover {
-  background-color: #4da1c2;
+  background-color: #00bad7;
 }
 
