--- a/src/app/info-instituciones/info-instituciones.component.html
+++ b/src/app/info-instituciones/info-instituciones.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="!showError">
+<div *ngIf="!showError" class="frame">
     <h2>Universidades disponibles</h2>
     <div *ngFor="let universidad of universidades" [ngClass]="getColorClass(universidad)">
       <p>{{ universidad.nombre }}</p>
@@ -16,19 +16,13 @@
         </div>
       </header>
     
-      <div class="search-bar">
-        <input type="text" placeholder="BUSCAR">
-        <button class="search-button">
-          <i class="icon-search"></i>
-        </button>
-      </div>
-    
       <div class="university-card">
         Universidad Peruana de Ciencias Aplicadas
       </div>
-    
-      <h2>Carreras recomendadas</h2>
-    
+      <div class="infobox">
+        <h2>Carreras recomendadas</h2> 
+      </div>
+      
       <div class="info-box">
         <label>Ubicación</label>
         <p>Monterrico</p>
