--- a/src/app/resultados-guardados/resultados-guardados.component.css
+++ b/src/app/resultados-guardados/resultados-guardados.component.css
@@ -1,10 +1,10 @@
 .success-container {
+  font-family: Arial;
   max-width: 600px;
   margin: 50px auto;
   padding: 30px;
   background-color: #ffffff;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
 
@@ -22,4 +22,26 @@
 .success-message {
   color: #666;
   line-height: 1.6;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 20px;
+}
+
+.button {
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  background-color: #009FB7;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #009FB7;
 }
