--- a/src/app/pages/auth/sign-in/sign-in.component.css
+++ b/src/app/pages/auth/sign-in/sign-in.component.css
@@ -117,4 +117,15 @@
         font-size: 14px;
         font-weight: 300;
     }
+
+    .error {
+        color: #d32f2f;
+        font-size: 0.875rem;
+        margin-top: 4px;
+    }
+      
+    .error small {
+        display: block;
+        line-height: 1.5;
+    }
 }
