--- a/src/app/pages/main/main.component.css
+++ b/src/app/pages/main/main.component.css
@@ -1,6 +1,8 @@
 .main-container {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
+    justify-content: center;    
     align-items: center;
     font-family: 'sans-serif', Poppins;
     gap: 48px;
