--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-body {
+html, body {
     margin: 0;
+    padding:0;
     min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    min-width: 100vw;
 }
