feat: correcion de links en navbar

--- a/src/app/shared/components/navbar-student/navbar-student.component.html
+++ b/src/app/shared/components/navbar-student/navbar-student.component.html
@@ -3,11 +3,11 @@
         <img src="assets/images/Logo.png" alt="logo" class="logo-image">
         <nav class="navbar">
             <ul>
-                <li><a routerLink="/student/inicio" routerlinkActive="active">Inicio</a></li>
-                <li><a routerLink="/student/test" routerLinkActive="active">Tests</a></li>
-                <li><a routerLink="/student/universities" routerLinkActive="active">Universidades</a></li>
-                <li><a routerLink="/student/community" routerLinkActive="active">Comunidad</a></li>
-                <li><a routerLink="/student/appointment" routerLinkActive="active">Citas</a></li>
+                <li><a routerLink="/home/student/inicio" routerlinkActive="active">Inicio</a></li>
+                <li><a routerLink="/home/student/test" routerLinkActive="active">Tests</a></li>
+                <li><a routerLink="/home/student/universities" routerLinkActive="active">Universidades</a></li>
+                <li><a routerLink="/home/student/community" routerLinkActive="active">Comunidad</a></li>
+                <li><a routerLink="/home/student/appointment" routerLinkActive="active">Citas</a></li>
             </ul>
         </nav>
         <div class="menu">
