--- a/src/app/pages/student/inicio/inicio.component.css
+++ b/src/app/pages/student/inicio/inicio.component.css
@@ -1,3 +1,14 @@
+.container {
+    width: 100%;
+    height: 85vh;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 main {
     display: flex;
     flex: 1;
@@ -52,6 +63,10 @@ main {
     padding: 20px;
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.button:hover {
+    translate: -3px;
 }
 
 .button img {
