--- a/src/app/pages/student/inicio/inicio.component.html
+++ b/src/app/pages/student/inicio/inicio.component.html
@@ -8,19 +8,19 @@
             <h1>Ruta Vocacional</h1>
             <p>Mapa guía vocacional y profesional</p>
             <div class="buttons">
-                <div class="button">
+                <div class="button" routerLink="/home/student/test">
                     <img src="assets/images/test-icon.png" alt="Test vocacional">
                     <p>Test vocacional</p>
                 </div>
-                <div class="button">
+                <div class="button" routerLink="/home/student/community">
                     <img src="assets/images/community-icon.png" alt="Comunidad">
                     <p>Comunidad</p>
                 </div>
-                <div class="button">
+                <div class="button" routerLink="/home/student/universities">
                     <img src="assets/images/career-icon.png" alt="Explorador de carreras">
                     <p>Explorador de carreras</p>
                 </div>
-                <div class="button">
+                <div class="button" routerLink="/home/student/appointment">
                     <img src="assets/images/appointment-icon.png" alt="Solicitar cita">
                     <p>Solicitar cita</p>
                 </div>
