--- a/src/app/pages/student/test/preguntas/test-1.component.css
+++ b/src/app/pages/student/test/preguntas/test-1.component.css
@@ -1,15 +1,25 @@
-.header h2 {
-    margin: 0;
-    font-size: 24px;
-    color: #333;
-    color: #009FB7;
+
+.top {
+    display: flex;
+    text-align: left;
 }
 
-.header p {
-    margin: 0;
+.back-arrow {
+    font-size: 24px;
+    color: #333;
+    cursor: pointer;
+}
+
+h1 {
+    font-size: 24px;
+    color: #333;
+    margin-top: 10px;
+}
+
+
+p {
     color: #777;
-    font-size: 14px;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
 
 body {
@@ -24,18 +34,21 @@ body {
 }
 
 .container {
+    display: flex;
+    width: 100%;
+    height: 85vh;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.main {
     max-width: 400px;
     width: 100%;
     text-align: center;
     font-family: Arial;
 }
 
-.title {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 20px;
-    color: #333;
-}
 
 .question-container {
     background-color: #ffffff;
@@ -83,7 +96,7 @@ body {
     appearance: none;
     width: 20px;
     height: 20px;
-    background-color: #3F51B5;
+    background-color: #01A7C2;
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -92,7 +105,7 @@ body {
 .slider::-moz-range-thumb {
     width: 20px;
     height: 20px;
-    background-color: #3F51B5;
+    background-color: #01A7C2;
     border-radius: 50%;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -102,7 +115,7 @@ body {
 .slider-value {
     font-size: 18px;
     font-weight: bold;
-    color: #3F51B5;
+    color: #000;
     margin-top: 5px;
 }
 .button-container {
@@ -131,10 +144,10 @@ body {
 }
 
 .button-next {
-    background-color: #3F51B5;
+    background-color: #01A7C2;
     color: white;
 }
 
 .button-next:hover {
-    background-color: #2C3A9D;
+    background-color: #0092AA;
 }
