--- a/src/app/pages/student/appointment/appointment.component.html
+++ b/src/app/pages/student/appointment/appointment.component.html
@@ -1,1 +1,38 @@
-<p>appointment works!</p>
+<!DOCTYPE html>
+    <main>
+        <header>
+            <nav>
+                <button class="back-button">←</button>
+                <h1>Citas</h1>
+            </nav>
+            <p class="subtitle">Explora tus intereses con expertos en la carrera de tu elección</p>
+        </header>
+
+        <div class="search-container">
+            <span class="search-icon">🔍</span>
+            <input type="text" placeholder="Buscar asesores">
+        </div>
+
+        <div class="advisors-list">
+            <div class="advisor-card">
+                <span>Francisco Emanuel Aguilar</span>
+                <button class="mail-button">✉</button>
+            </div>
+            <div class="advisor-card">
+                <span>Francisco Emanuel Aguilar</span>
+                <button class="mail-button">✉</button>
+            </div>
+            <div class="advisor-card">
+                <span>Francisco Emanuel Aguilar</span>
+                <button class="mail-button">✉</button>
+            </div>
+            <div class="advisor-card">
+                <span>Francisco Emanuel Aguilar</span>
+                <button class="mail-button">✉</button>
+            </div>
+            <div class="advisor-card">
+                <span>Francisco Emanuel Aguilar</span>
+                <button class="mail-button">✉</button>
+            </div>
+        </div>
+    </main>
