feat: pagina community

--- a/src/app/pages/student/foro/foro.component.html
+++ b/src/app/pages/student/foro/foro.component.html
@@ -1,6 +1,7 @@
 <div class="container">
+  <main>
     <div class="sidebar">
-      <div class="back-button">←</div>
+      <div class="back-button"><img src="assets/images/flecha-izquierda.png" routerLink="/home/student/community"></div>
       <button class="forum-button">Foro UPC</button>
       <button class="forum-button">Foro ULima</button>
       <button class="forum-button">Foro UP</button>
@@ -22,5 +23,6 @@
         <button class="send-button" (click)="sendMessage()">➤</button>
       </div>
     </div>
-  </div>
+  </main>
+</div>
   
