--- a/src/app/pages/student/community/community.component.html
+++ b/src/app/pages/student/community/community.component.html
@@ -1,1 +1,22 @@
-<p>community works!</p>
+<main>
+    <div class="content">
+        <div class="top">
+            <div class="back-arrow" >
+                <img src="assets/images/flecha-izquierda.png" alt="flecha" routerLink="/home/student/inicio">
+            </div>
+            <div class="title">
+                <h1>Test Vocacional</h1>
+                <p>Sección de test para el estudiante</p>
+            </div>
+        </div>
+
+        <div class="forum-container">
+            <button class="forum-button" (click)="navigateToForo()">Foro UPC<br><span>Click para navegar</span></button>
+            <button class="forum-button" (click)="navigateToForo()">Foro ULima<br><span>Click para navegar</span></button>
+            <button class="forum-button" (click)="navigateToForo()">Foro UP<br><span>Click para navegar</span></button>
+            <button class="forum-button" (click)="navigateToForo()">Foro Ingeniería<br><span>Click para navegar</span></button>
+            <button class="forum-button" (click)="navigateToForo()">Foro Ciencias de la Salud<br><span>Click para navegar</span></button>
+            <button class="forum-button" (click)="navigateToForo()">Foro Arquitectura<br><span>Click para navegar</span></button>
+        </div>
+    </div>
+</main>
