--- a/src/app/pages/student/foro/foro.component.css
+++ b/src/app/pages/student/foro/foro.component.css
@@ -15,8 +15,9 @@ body {
     padding: 0;
 }
 
-.container {
+main {
     display: flex;
+    width: 100%;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -26,9 +27,15 @@ body {
     overflow: hidden;
 }
 
+.container {
+    display: flex;
+    justify-content: center;
+    
+}
+
 .sidebar {
     width: 25%; /* Reducimos el ancho de la barra lateral para dar más espacio al chat */
-    background-color: #00a1b3;
+    background-color: #01A7C2;
     padding: 15px;
     display: flex;
     flex-direction: column;
