--- a/src/app/pages/student/inicio/inicio.component.html
+++ b/src/app/pages/student/inicio/inicio.component.html
@@ -2,7 +2,7 @@
     <main>
         <div class="profile">
             <img src="assets/images/profile.png" alt="Jon Doe">
-            <p>Jon Doe</p>
+            <h2>Jon Doe</h2>
         </div>
         <div class="content">
             <h1>Ruta Vocacional</h1>
